--- a/project-count/pom.xml
+++ b/project-count/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.taike</groupId>
-	<artifactId>project-count</artifactId>
+	<artifactId>count-pom</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
