--- a/project-count/pom.xml
+++ b/project-count/pom.xml
@@ -22,6 +22,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<guava-version>19.0</guava-version>
+		<dbUtils-version>1.6</dbUtils-version>
 	</properties>
 
 	<dependencies>
@@ -37,6 +39,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>org.springframework.beans</artifactId>
+			<!--<version>3.1.2.RELEASE</version>-->
+		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -48,7 +55,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-dbutils</groupId>
+			<artifactId>commons-dbutils</artifactId>
+			<version>${dbUtils-version}</version>
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
