--- a/project-count/pom.xml
+++ b/project-count/pom.xml
@@ -24,6 +24,7 @@
 		<java.version>1.8</java.version>
 		<guava-version>19.0</guava-version>
 		<dbUtils-version>1.6</dbUtils-version>
+		<spring-framework-beans>3.1.2.RELEASE</spring-framework-beans>
 	</properties>
 
 	<dependencies>
@@ -42,7 +43,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>org.springframework.beans</artifactId>
-			<!--<version>3.1.2.RELEASE</version>-->
+			<version>${spring-framework-beans}</version>
 		</dependency>
 
 		<dependency>
