--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,4 @@ wordoutput/maintable.txt
 
 project-count/src/main/resources/static/
 project-count/src/main/resources/templates/
+project-mouse/mvnw
