--- a/project-mouse/pom.xml
+++ b/project-mouse/pom.xml
@@ -70,6 +70,13 @@
             <artifactId>commons-io</artifactId>
             <version>${common.io.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+
 
 
         <dependency>
