--- a/project-mouse/pom.xml
+++ b/project-mouse/pom.xml
@@ -88,9 +88,12 @@
             <artifactId>commons-dbutils</artifactId>
             <version>1.6</version>
         </dependency>
-
-
-
+        <!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.4.2</version>
+        </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
