向mongodb中添加文档；

--- a/project-mouse/src/main/resources/application.yml
+++ b/project-mouse/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8
     username: root
     password: 123456
+  data:
+    mongodb:
+      host: localhost
 
 ---
 spring:
@@ -13,6 +16,9 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8
     username: root
     password: 123456
+  data:
+    mongodb:
+      host: localhost
 
 ---
 spring:
@@ -21,6 +27,9 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8
     username: root
     password: 123456
+  data:
+    mongodb:
+      host: localhost
 
 ---
 spring:
@@ -29,4 +38,7 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8
     username: root
     password: 123456
+  data:
+    mongodb:
+      host: localhost
 
