--- a/project-mouse/src/main/resources/application.yml
+++ b/project-mouse/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
   data:
     mongodb:
       host: localhost
+      username: bookAdmin
+      password: 123456
+      authentication-database: book
+      database: book
 
 ---
 spring:
@@ -19,6 +23,10 @@ spring:
   data:
     mongodb:
       host: localhost
+      username: bookAdmin
+      password: 123456
+      authentication-database: book
+      database: book
 
 ---
 spring:
@@ -30,6 +38,10 @@ spring:
   data:
     mongodb:
       host: localhost
+      username: bookAdmin
+      password: 123456
+      authentication-database: book
+      database: book
 
 ---
 spring:
@@ -41,4 +53,7 @@ spring:
   data:
     mongodb:
       host: localhost
-
+      username: bookAdmin
+      password: 123456
+      authentication-database: book
+      database: book
